@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.30 2007/10/15 14:08:32 reinoud Exp $
+$NetBSD: distinfo,v 1.31 2007/11/08 20:09:03 reinoud Exp $
 
-SHA1 (UDFclient.0.5.6.tgz) = a4f09a0a48753a75f916ae37d4e54a52aced4047
-RMD160 (UDFclient.0.5.6.tgz) = f4b3fad768c9863768e9266c875d3d41bdc099fe
-Size (UDFclient.0.5.6.tgz) = 237023 bytes
+SHA1 (UDFclient.0.5.7.tgz) = 169d631800989b19c8db287300682ad8fb8a890e
+RMD160 (UDFclient.0.5.7.tgz) = 569e0ccc37dab7e027ee21156791f21bcce33f41
+Size (UDFclient.0.5.7.tgz) = 234205 bytes
